<resources>
    <string name="app_name">forest</string>
    <string name="title_home">홈</string>
    <string name="title_last_schedule">지난 일정</string>
    <string name="title_register">일정 등록</string>
    <string name="title_analysis">데이터 분석</string>
    <string name="title_profile">내 정보</string>

    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>

    <string name="delete">삭제</string>

    <string name="disabled">-</string>












    <string name="countries_fragment_label">Countries</string>
    <string name="countries_input_search_hint">Search countries</string>
    <string name="details_label_capital">Capital</string>
    <string name="details_label_subregion">Subregion</string>
    <string name="details_label_languages">Languages</string>
    <string name="details_label_population">Population</string>
    <string name="details_label_area">Area</string>
    <string name="details_label_borders">Borders</string>
    <string name="details_fragment_label">Details</string>
    <string name="countries_filter_title">Sort and Filter</string>
    <string name="filter_sheet_sort_alphabetical_order">Alphabetical order</string>
    <string name="filter_sheet_sort_population">Population</string>
    <string name="filter_sheet_label_sort_by">Sort by</string>
    <string name="filter_sheet_label_subregion">Subregion</string>
    <string name="action_apply">Apply</string>
    <string name="action_rest_all">Rest All</string>
    <string name="action_retry">Retry</string>
    <string name="message_error_internet_error">Internet connection lost</string>
    <string name="message_error_server_error">Internet connection lost</string>
    <string name="message_error_unknown_error">Something went wrong</string>
</resources>