<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_last_schedule"
        android:icon="@drawable/baseline_check_24"
        android:title="@string/title_last_schedule" />

    <item
        android:id="@+id/navigation_register"
        android:title="@string/title_register" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/baseline_insert_chart_24"
        android:title="@string/title_analysis" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />
</menu>